Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.8 ----------

[all] Image files are now extracted with proper file extension, even if the ODF manifest contains no media type

[all] Added support for images in EMF format (Enhanced Windows Meta Files)

[w2l] Bugfix: No longer decodes URLs in links (hyperref.sty has no problem with sequences like %E4)

[w2x] EPUB bugfix: The meta data editor now shows the correct default creator (not the original creator)

[w2x] New option cover_image with values true and false (default). In EPUB export, if this option is set the true the very
  first image found in the document is used as cover image.

[w2x] New option image_split with values "none" or a percentage. In EPUB export an image
  of width greater than or equal to this percentage is placed in a separate file as a full screen image.
  This takes effect only if the aspect ratio is at least 3:4

[w2x] The EPUB export now supports additional resource files (e.g. images, fonts) to the custom style sheet
  - using the readResource method of the converter API
  - using the -resource method of the command line application
  - using the ResourceURL or Resources property of the filter API
  - by specifying the resource files in a custom configuration

[all] API change: Added the method readResource to the Converter interface (only used by EPUB export currently) 

[w2x] Crossed out headings are ignored in EPUB export, but retained in the external toc

[all] Added Farsi translation from Mostafa Barmshory

[w2l] Added support for xepersian.sty (fa_IR locale, requires XeTeX backend and multilingual=true)

---------- version 1.1.7 ----------

[all] Bugfix: Fixed null pointer exception for tables with unbalanced rows

[w2l] Added the attribute break-after to paragraph style maps with values none, line and par (default)

[w2x] Bugfix: Positioning of text boxes (left, right, center, floating) now works correctly 
