@@ -1,0 +1,111 @@
+# LaTeXOptions strings in Catalan
+0.LaTeXOptions.HelpText=
+1.LaTeXOptions.Title=Opcions de LaTeX (Writer2LaTeX)
+2.LaTeXOptions.FixedLine1.HelpText=
+3.LaTeXOptions.FixedLine1.Label=
+4.LaTeXOptions.GeneralLabel.HelpText=
+5.LaTeXOptions.GeneralLabel.Label=General
+6.LaTeXOptions.ConfigLabel.HelpText=
+7.LaTeXOptions.ConfigLabel.Label=Format de LaTeX
+8.LaTeXOptions.Config.HelpText=
+137.Config.StringItemList=S\u00faper-net
+138.Config.StringItemList=Net
+139.Config.StringItemList=Per omissi\u00f3
+140.Config.StringItemList=Optimitzat per impressi\u00f3
+141.Config.StringItemList=Optimitzat per pantalla (pdf)
+142.Config.StringItemList=Personalitzat
+15.LaTeXOptions.BackendLabel.HelpText=
+16.LaTeXOptions.BackendLabel.Label=Programari de base
+17.LaTeXOptions.Backend.HelpText=
+116.Backend.StringItemList=Gen\u00e8ric
+117.Backend.StringItemList=Pdf (pdfTeX)
+118.Backend.StringItemList=Postscript (dvips)
+119.Backend.StringItemList=Indefinit
+22.LaTeXOptions.InputencodingLabel.HelpText=
+23.LaTeXOptions.InputencodingLabel.Label=Codificaci\u00f3
+24.LaTeXOptions.Inputencoding.HelpText=
+120.Inputencoding.StringItemList=US ASCII
+121.Inputencoding.StringItemList=Europa occidental (ISO 8859-1)
+122.Inputencoding.StringItemList=Europa oriental (ISO 8859-2)
+123.Inputencoding.StringItemList=Llat\u00ed i grec (ISO 8859-7)
+124.Inputencoding.StringItemList=Microsoft Europa oriental (Cp1250)
+125.Inputencoding.StringItemList=Microsoft Cir\u00edl\u00b7lic (Cp1251)
+126.Inputencoding.StringItemList=Rus (koi8-r)
+127.Inputencoding.StringItemList=Unicode (UTF8)
+33.LaTeXOptions.Multilingual.HelpText=
+34.LaTeXOptions.Multilingual.Label=Suport multiling\u00fce
+35.LaTeXOptions.GreekMath.HelpText=
+36.LaTeXOptions.GreekMath.Label=Lletres gregues com a s\u00edmbols
+37.LaTeXOptions.AdditionalSymbols.HelpText=
+38.LaTeXOptions.AdditionalSymbols.Label=S\u00edmbols suplementaris
+39.LaTeXOptions.BibliographyLabel.HelpText=
+40.LaTeXOptions.BibliographyLabel.Label=Bibliografia
+41.LaTeXOptions.UseBibtex.HelpText=
+42.LaTeXOptions.UseBibtex.Label=Fes la bibliografia amb BibTeX
+43.LaTeXOptions.BibtexStyleLabel.HelpText=
+44.LaTeXOptions.BibtexStyleLabel.Label=Estil
+45.LaTeXOptions.BibtexStyle.HelpText=
+46.BibtexStyle.StringItemList=Senzill (plain)
+47.BibtexStyle.StringItemList=Sense triar (unsrt)
+48.BibtexStyle.StringItemList=Tria alfab\u00e8tica (alpha)
+49.BibtexStyle.StringItemList=Abreviatures (abbrv)
+50.LaTeXOptions.BibtexStyle.Text=
+51.LaTeXOptions.FilesLabel.HelpText=
+52.LaTeXOptions.FilesLabel.Label=Fitxers
+53.LaTeXOptions.WrapLines.HelpText=
+54.LaTeXOptions.WrapLines.Label=Embolica les ratlles llargues
+55.LaTeXOptions.WrapLinesAfterLabel.HelpText=
+56.LaTeXOptions.WrapLinesAfterLabel.Label=Despr\u00e9s dels car\u00e0cters 
+57.LaTeXOptions.WrapLinesAfter.HelpText=
+58.LaTeXOptions.SplitLinkedSections.HelpText=
+59.LaTeXOptions.SplitLinkedSections.Label=Separa el document als enlla\u00e7os
+60.LaTeXOptions.SplitToplevelSections.HelpText=
+61.LaTeXOptions.SplitToplevelSections.Label=Separa el document a les seccions de primer nivell
+62.LaTeXOptions.SaveImagesInSubdir.HelpText=
+63.LaTeXOptions.SaveImagesInSubdir.Label=Desa les imatges en un subdirectori
+64.LaTeXOptions.SpecialContentLabel.HelpText=
+65.LaTeXOptions.SpecialContentLabel.Label=Contingut especial
+66.LaTeXOptions.NotesLabel.HelpText=
+67.LaTeXOptions.NotesLabel.Label=Exporta les notes
+68.LaTeXOptions.Notes.HelpText=
+128.Notes.StringItemList=No ho exportis
+129.Notes.StringItemList=Com a comentaris
+130.Notes.StringItemList=Com a notes al marge
+131.Notes.StringItemList=Com a anotacions pdf
+73.LaTeXOptions.Metadata.HelpText=
+74.LaTeXOptions.Metadata.Label=Exporta les propietats del document (metadata)
+75.LaTeXOptions.FiguresAndTablesLabel.HelpText=
+76.LaTeXOptions.FiguresAndTablesLabel.Label=Figures i taules
+77.LaTeXOptions.OriginalImageSize.HelpText=
+78.LaTeXOptions.OriginalImageSize.Label=Fes servir la mida original d'imatges
+79.LaTeXOptions.OptimizeSimpleTables.HelpText=
+80.LaTeXOptions.OptimizeSimpleTables.Label=Optimitza les taules senzilles
+81.LaTeXOptions.SimpleTableLimitLabel.HelpText=
+82.LaTeXOptions.SimpleTableLimitLabel.Label=Amplada m\u00e0xima en car\u00e0cters
+83.LaTeXOptions.SimpleTableLimit.HelpText=
+84.LaTeXOptions.FloatTables.HelpText=
+85.LaTeXOptions.FloatTables.Label=Taules flotants
+86.LaTeXOptions.FloatFigures.HelpText=
+87.LaTeXOptions.FloatFigures.Label=Figures flotants
+88.LaTeXOptions.FloatOptionsLabel.HelpText=
+89.LaTeXOptions.FloatOptionsLabel.Label=Empla\u00e7ament dels flotants
+90.LaTeXOptions.FloatOptions.HelpText=
+132.FloatOptions.StringItemList=Al damunt o al capdavall de la p\u00e0gina
+133.FloatOptions.StringItemList=Al damunt de la p\u00e0gina
+134.FloatOptions.StringItemList=Al capdavall de la p\u00e0gina
+135.FloatOptions.StringItemList=Aqu\u00ed o al damunt de la p\u00e0gina
+136.FloatOptions.StringItemList=Aqu\u00ed o al capdavall de la p\u00e0gina
+96.LaTeXOptions.AutoCorrectLabel.HelpText=
+97.LaTeXOptions.AutoCorrectLabel.Label=Correcci\u00f3 autom\u00e0tica
+98.LaTeXOptions.IgnoreHardPageBreaks.HelpText=
+99.LaTeXOptions.IgnoreHardPageBreaks.Label=Ignora els salts de p\u00e0gina
+100.LaTeXOptions.IgnoreHardLineBreaks.HelpText=
+101.LaTeXOptions.IgnoreHardLineBreaks.Label=Ignora els salts de l\u00ednia
+102.LaTeXOptions.IgnoreEmptyParagraphs.HelpText=
+103.LaTeXOptions.IgnoreEmptyParagraphs.Label=Ignora els par\u00e0grafs buits
+104.LaTeXOptions.IgnoreDoubleSpaces.HelpText=
+105.LaTeXOptions.IgnoreDoubleSpaces.Label=Ignora els espais dobles
+106.LaTeXOptions.ExportButton.HelpText=
+107.LaTeXOptions.ExportButton.Label=Exporta
+108.LaTeXOptions.CancelButton.HelpText=
+109.LaTeXOptions.CancelButton.Label=Cancel\u00b7la
