@@ -1,0 +1,131 @@
+# Strings for Dialog Library W2XDialogs=Catal\u00e0
+0.XhtmlOptions.HelpText=
+1.XhtmlOptions.Title=Opcions XHTML (Writer2xhtml)
+2.XhtmlOptions.StyleLabel.HelpText=
+3.XhtmlOptions.StyleLabel.Label=Estil
+4.XhtmlOptions.ConfigLabel.HelpText=
+5.XhtmlOptions.ConfigLabel.Label=Fes servir estil
+6.XhtmlOptions.Config.HelpText=
+17.XhtmlOptions.ScalingLabel.HelpText=
+18.XhtmlOptions.ScalingLabel.Label=Escalat
+19.XhtmlOptions.Scaling.HelpText=
+20.XhtmlOptions.ScalingPercentLabel.HelpText=
+21.XhtmlOptions.ScalingPercentLabel.Label=%
+22.XhtmlOptions.ColumnScalingLabel.HelpText=
+23.XhtmlOptions.ColumnScalingLabel.Label=Escalat columnes
+24.XhtmlOptions.ColumnScaling.HelpText=
+25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
+26.XhtmlOptions.ColumnScalingPercentLabel.Label=%
+27.XhtmlOptions.ConvertToPx.HelpText=
+28.XhtmlOptions.ConvertToPx.Label=Converteix unitats en px (pixels)
+29.XhtmlOptions.OriginalImageSize.HelpText=
+30.XhtmlOptions.OriginalImageSize.Label=Fes servir la mida original d'imatges
+31.XhtmlOptions.SpecialContentLabel.HelpText=
+32.XhtmlOptions.SpecialContentLabel.Label=Contingut especial
+33.XhtmlOptions.Notes.HelpText=
+34.XhtmlOptions.Notes.Label=Exporta les notes
+35.XhtmlOptions.UseDublinCore.HelpText=
+36.XhtmlOptions.UseDublinCore.Label=Exporta les propietats del document (Dublin Core Metadata)
+37.XhtmlOptions.AutoCorrectLabel.HelpText=
+38.XhtmlOptions.AutoCorrectLabel.Label=Correcci\u00f3 autom\u00e0tica
+39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Ignora els salts de l\u00ednia
+41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Ignora els par\u00e0grafs buits
+43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Ignora els espais dobles
+45.XhtmlOptions.FilesLabel.HelpText=
+46.XhtmlOptions.FilesLabel.Label=Fitxers
+47.XhtmlOptions.Split.HelpText=
+48.XhtmlOptions.Split.Label=Separa el document als encap\u00e7alaments
+49.XhtmlOptions.SplitLevelLabel.HelpText=
+50.XhtmlOptions.SplitLevelLabel.Label=Encap\u00e7alament
+51.XhtmlOptions.SplitLevel.HelpText=
+52.SplitLevel.StringItemList=1
+53.SplitLevel.StringItemList=2
+54.SplitLevel.StringItemList=3
+55.SplitLevel.StringItemList=4
+56.SplitLevel.StringItemList=5
+57.SplitLevel.StringItemList=6
+58.XhtmlOptions.RepeatLevelsLabel.HelpText=
+59.XhtmlOptions.RepeatLevelsLabel.Label=Itera els nivells d'encap\u00e7alaments
+60.XhtmlOptions.RepeatLevels.HelpText=
+61.RepeatLevels.StringItemList=0
+62.RepeatLevels.StringItemList=1
+63.RepeatLevels.StringItemList=2
+64.RepeatLevels.StringItemList=3
+65.RepeatLevels.StringItemList=4
+66.RepeatLevels.StringItemList=5
+67.XhtmlOptions.SaveImagesInSubdir.HelpText=
+68.XhtmlOptions.SaveImagesInSubdir.Label=Desa les imatges en un subdirectori
+69.XhtmlOptions.XsltPathLabel.HelpText=
+70.XhtmlOptions.XsltPathLabel.Label=Cam\u00ed XSLT
+71.XhtmlOptions.XsltPath.HelpText=
+72.XhtmlOptions.XsltPath.Text=
+73.XhtmlOptions.ExportButton.HelpText=
+74.XhtmlOptions.ExportButton.Label=Exporta
+75.XhtmlOptions.CancelButton.HelpText=
+76.XhtmlOptions.CancelButton.Label=Cancel\u00b7la
+77.XhtmlOptionsCalc.HelpText=
+78.XhtmlOptionsCalc.Title=Opcions per a XHTML (Calc2xhtml)
+79.XhtmlOptionsCalc.StyleLabel.HelpText=
+80.XhtmlOptionsCalc.StyleLabel.Label=Estil
+81.XhtmlOptionsCalc.ConfigLabel.HelpText=
+82.XhtmlOptionsCalc.ConfigLabel.Label=Fes servir l'estil
+83.XhtmlOptionsCalc.Config.HelpText=
+86.XhtmlOptionsCalc.ScalingLabel.HelpText=
+87.XhtmlOptionsCalc.ScalingLabel.Label=Escalat
+88.XhtmlOptionsCalc.Scaling.HelpText=
+89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
+90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
+91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Escalat columnes
+93.XhtmlOptionsCalc.ColumnScaling.HelpText=
+94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
+95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
+96.XhtmlOptionsCalc.ConvertToPx.HelpText=
+97.XhtmlOptionsCalc.ConvertToPx.Label=Converteix unitats en px (pixels)
+98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
+99.XhtmlOptionsCalc.OriginalImageSize.Label=Fes servir la mida original d'imatges
+100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Contingut especial
+102.XhtmlOptionsCalc.Notes.HelpText=
+103.XhtmlOptionsCalc.Notes.Label=Exporta les notes
+104.XhtmlOptionsCalc.UseDublinCore.HelpText=
+105.XhtmlOptionsCalc.UseDublinCore.Label=Exporta les propietats del document (Dublin Core Metadata)
+106.XhtmlOptionsCalc.SheetsLabel.HelpText=
+107.XhtmlOptionsCalc.SheetsLabel.Label=Fulls
+108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Mostra els fulls amagats
+110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Mostra files i columnes amagades
+112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Mostra files i columnes amagades
+114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Aplica els l\u00edmits d'impressi\u00f3
+116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Fes servir el t\u00edtol com a encap\u00e7alament
+118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Fes servir els noms dels fulls com a encap\u00e7alaments
+120.XhtmlOptionsCalc.FilesLabel.HelpText=
+121.XhtmlOptionsCalc.FilesLabel.Label=Fitxers
+122.XhtmlOptionsCalc.CalcSplit.HelpText=
+123.XhtmlOptionsCalc.CalcSplit.Label=Desa els fulls en fitxers diferents
+124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Desa les imatges en un subdirectori
+126.XhtmlOptionsCalc.ExportButton.HelpText=
+127.XhtmlOptionsCalc.ExportButton.Label=Exporta
+128.XhtmlOptionsCalc.CancelButton.HelpText=
+129.XhtmlOptionsCalc.CancelButton.Label=Cancel\u00b7la
+130.Config.StringItemList=Format original
+131.Config.StringItemList=Xocolata
+132.Config.StringItemList=Mitja nit
+133.Config.StringItemList=Modernista
+134.Config.StringItemList=Antic
+135.Config.StringItemList=Met\u00e0l\u00b7lic
+136.Config.StringItemList=Su\u00eds
+137.Config.StringItemList=Tradicional
+138.Config.StringItemList=Ultramar\u00ed
+139.Config.StringItemList=Custom
+140.Config.StringItemList=Format original
+141.Config.StringItemList=Personalitzat
