@@ -1,0 +1,1 @@
+Writer2xhtml forneix a Writer i Calc filtres d'exportació per XHTML i XHTML+MathML
